@@ -57,6 +57,7 @@ void report_interrupted(void);
 int print_verifying_header(struct file_t* file);
 int print_verifying_footer(void);
 int print_check_stats(void);
+int print_verbose_algorithms(FILE* out, unsigned hash_mask);
 
 void print_time_stats(uint64_t time, uint64_t size, int total);
 void print_file_time_stats(struct file_info* info);
